# obs-vintage-filter

./: CMakeLists.txt  README.md  buildspec.json
.github/workflows/: main.yml
cmake/: ObsPluginHelpers.cmake
data/: black_white.effect  sepia.effect
data/effects/: black_white.effect
data/locale/: en-US.ini  pt-BR.ini
src/: plugin-macros.h.in  plugin-main.c  plugin-support.c.in  plugin-support.h  vintage-filter.c
